<resources>
    <string name="app_name">News WatchTower 5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="news_image_description">This is a news image</string>
    <string name="new_york">NYC</string>
    <string name="kampala">KLA</string>
    <string name="kigali">KIG</string>
    <string name="lagos">LAG</string>
    <string name="nairobi">NAI</string>
    <string name="uganda">Uganda</string>
    <string name="rwanda">Rwanda</string>
    <string name="nigeria">Nigeria</string>
    <string name="kenya">Kenya</string>
    <string name="america">America</string>
    <string name="stored_news">Your Saved Stories</string>
    <string name="your_locale_news">Reports In Other Locations</string>
    <string name="top_international_news">International Top Headlines</string>
    <string name="home">Home</string>
    <string name="generalFragment">generalFragment</string>
    <string name="home_button">Home Button</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="bbc">bbc-news</string>
    <string name="internationalFragment">internationalFragment</string>
    <string name="news_watchtower_5">News WatchTower 5</string>
    <string name="news_details">News Details</string>
    <string name="author">Author</string>
    <string name="source">Source</string>
    <string name="publish_date">Publish Date</string>
    <string name="detailFragment">detailFragment</string>
    <string name="saved_successfully">successfully saved</string>
    <string name="savedArticleFragment">savedArticleFragment</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="enable_internet">Enable Internet</string>
    <string name="internet_dialog_message">Turn on internet connection to get latest news updates otherwise, you can only view your stored news.</string>
    <string name="confirm_delete">Confirm Delete!</string>
    <string name="delete_message">will be deleted from your storage</string>
    <string name="no_internet_title">Oops! No Internet Connection!</string>
    <string name="localeNewsFragment">localeNewsFragment</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="one_more_click">1 more click to exit</string>
    <string name="location">location</string>
    <string name="news_source">source</string>
    <string name="article_database">article_database</string>
    <string name="other_locale_news">Other Locale News</string>
</resources>
