<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/news_watchtower_5">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home" />
            <item
                android:id="@+id/international_news"
                android:icon="@drawable/ic_public_black_24dp"
                android:title="@string/top_international_news" />
            <item
                android:id="@+id/locale_news"
                android:icon="@drawable/ic_my_location_black_24dp"
                android:title="@string/your_locale_news" />
            <item
                android:id="@+id/stored_news"
                android:icon="@drawable/ic_archive_black_24dp"
                android:title="@string/stored_news" />
        </menu>
    </item>

</menu>
